Fix mobile view Fix swap widget template Fix double scroll on request page

--- a/src/components/toast/toast-notifications.scss
+++ b/src/components/toast/toast-notifications.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: calc(100% - $space-standard);
+  width: calc(100% - #{$space-standard});
   max-width: 30em;
   padding: 4px 4px 0 0;
   z-index: 999;
